--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,9 @@
       "email": "hallysust@gmail.com"
     }
   ],
-  "require": {},
   "require-dev": {
-    "php-stubs/wordpress-stubs": "^6.8"
+    "php-stubs/wordpress-stubs": "^6.8",
+    "arifpavel/elementor-stubs": "3.1.4.1",
+    "php-stubs/acf-pro-stubs": "^6.5"
   }
 }
